--- a/src/sass/common/_languageSelection.scss
+++ b/src/sass/common/_languageSelection.scss
@@ -26,7 +26,7 @@ ul.pureCssMenu li{
 	display:block;
 	margin:2px 0px 0px 2px;
 	font-size:0px;
-    z-index: 1;
+    z-index: 600;
 }
 ul.pureCssMenu a:active, ul.pureCssMenu a:focus {
 outline-style:none;
